--- a/cobaconnectdbonline/cobaconnectdbonline/packages.config
+++ b/cobaconnectdbonline/cobaconnectdbonline/packages.config
@@ -8,6 +8,7 @@
   <package id="MongoDB.Bson" version="3.5.2" targetFramework="net472" />
   <package id="MongoDB.Driver" version="3.5.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
+  <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net472" />
   <package id="SharpCompress" version="0.30.1" targetFramework="net472" />
   <package id="Snappier" version="1.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
