CRUD data sampah dan Chat Bot

--- a/cobaconnectdbonline/cobaconnectdbonline/cobaconnectdbonline.csproj
+++ b/cobaconnectdbonline/cobaconnectdbonline/cobaconnectdbonline.csproj
@@ -71,6 +71,7 @@
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.4.3.0\lib\net462\System.IO.dll</HintPath>
@@ -160,6 +161,18 @@
     <Compile Include="FormAdmin.Designer.cs">
       <DependentUpon>FormAdmin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormChatbot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormChatbot.Designer.cs">
+      <DependentUpon>FormChatbot.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormDataSampah.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormDataSampah.Designer.cs">
+      <DependentUpon>FormDataSampah.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDataUser.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,6 +203,7 @@
     <Compile Include="FormRegis.Designer.cs">
       <DependentUpon>FormRegis.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\DataSampah.cs" />
     <Compile Include="Models\JenisSampah.cs" />
     <Compile Include="Models\KabupatenKota.cs" />
     <Compile Include="Models\User.cs" />
@@ -200,6 +214,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormAdmin.resx">
       <DependentUpon>FormAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormChatbot.resx">
+      <DependentUpon>FormChatbot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormDataSampah.resx">
+      <DependentUpon>FormDataSampah.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDataUser.resx">
       <DependentUpon>FormDataUser.cs</DependentUpon>
